WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141555
REGRESSION(
r179573
): Web Inspector toolbar is completely messed up on Mavericks
https://bugs.webkit.org/show_bug.cgi?id=141555
Summary
REGRESSION(r179573): Web Inspector toolbar is completely messed up on Mavericks
Benjamin Poulain
Reported
2015-02-12 23:34:32 PST
Created
attachment 246511
[details]
Screenshot The toolbar is completely fucked on Mavericks. WebKit Nightly
r179913
OS X 13F34 I tried to take a screenshot but that does not work. The image on the screenshot is not what I have on screen. It looks like the backbuffer for the toolbar points to a completely semi-random area of video memory.
Attachments
Screenshot
(145.33 KB, image/png)
2015-02-12 23:34 PST
,
Benjamin Poulain
no flags
Details
Better screenshot
(570.41 KB, image/png)
2015-02-13 20:55 PST
,
Brian Burg
no flags
Details
Proposed Fix
(1.89 KB, patch)
2015-02-14 09:25 PST
,
Brian Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-02-12 23:34:57 PST
<
rdar://problem/19824376
>
Timothy Hatcher
Comment 2
2015-02-13 14:23:55 PST
Regression from the switch to WKWebView?
Brian Burg
Comment 3
2015-02-13 20:55:31 PST
Created
attachment 246574
[details]
Better screenshot Investigating tonight/tomorrow on Mavericks machine.
Brian Burg
Comment 4
2015-02-14 09:25:12 PST
Created
attachment 246590
[details]
Proposed Fix Looks back to normal on Mavericks with this change.
Joseph Pecoraro
Comment 5
2015-02-14 09:58:46 PST
Comment on
attachment 246590
[details]
Proposed Fix r=me
Brian Burg
Comment 6
2015-02-14 10:49:13 PST
Confirmed correct behavior on Yosemite as well. Setting cq+
WebKit Commit Bot
Comment 7
2015-02-14 11:34:38 PST
Comment on
attachment 246590
[details]
Proposed Fix Clearing flags on attachment: 246590 Committed
r180112
: <
http://trac.webkit.org/changeset/180112
>
WebKit Commit Bot
Comment 8
2015-02-14 11:34:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug