REGRESSION(r179573): Web Inspector toolbar is completely messed up on Mavericks https://bugs.webkit.org/show_bug.cgi?id=141555

Reviewed by Joseph Pecoraro.

The old WKView-based code called _setDrawsBackground:NO on the WKView for Mavericks.
Simulate this old behavior by calling WebPageProxy::setDrawsBackground(false).

WKWebView's setOpaque:BOOL gives a flat background color instead of the intended
gradient, so we can't use that method.

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::platformCreateInspectorPage):


Canonical link: https://commits.webkit.org/159633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180112 268f45cc-cd09-0410-ab3c-d52691b4dbfc